@startuml
skinparam linetype polyline
skinparam linetype ortho

title __Cache Service Class Diagram__\n

  class tech.eportfolio.server.service.cache.PortfolioServiceCacheImpl {
      + PortfolioServiceCacheImpl()
      + create()
      + deleteContent()
      + findByIdIn()
      + findByUserIdIn()
      + findByUsername()
      + fromPortfolioDTO()
      + pushPortfolioToActivity()
      + pushPortfolioToActivity()
      + pushUpdateToActivity()
      + pushUpdateToActivity()
      + save()
      + saveAll()
      + searchByKeywordWithPaginationAndVisibilities()
      + searchByTagWithPaginationAndVisibilities()
      + searchWithPagination()
      + searchWithVisibilities()
      + searchWithVisibilities()
      + toPortfolioActivity()
      + toUpdateActivity()
      + updateContent()
      + updatePortfolio()
  }



  class tech.eportfolio.server.service.cache.UserServiceCacheImpl {
      - logger : Logger
      + UserServiceCacheImpl()
      + changePassword()
      + createGithubAvatar()
      + delete()
      + findAllActive()
      + findByEmail()
      + findByIdIn()
      + findByUsername()
      + findByUsernameIn()
      + findDeletedUserWithContainer()
      + fromUserDTO()
      + loadUserByUsername()
      + register()
      + save()
      + saveAll()
      + verifyPassword()
  }

  note bottom of tech.eportfolio.server.service.PortfolioService
    Use PortfolioService as an example, PortfolioServiceCacheImpl implements PortfolioService interface. It is also auto-wired
    to a PortfolioServiceImpl bean. All responsibilities are delegated to the PortfolioServiceImpl. PortfolioServiceCacheImpl
    doesn't contain business logic but manage cache.
  end note

  tech.eportfolio.server.service.cache.PortfolioServiceCacheImpl .up.|> tech.eportfolio.server.service.PortfolioService
  tech.eportfolio.server.service.cache.PortfolioServiceCacheImpl o-- tech.eportfolio.server.service.PortfolioService : portfolioService
  tech.eportfolio.server.service.cache.UserServiceCacheImpl .up.|> org.springframework.security.core.userdetails.UserDetailsService
  tech.eportfolio.server.service.cache.UserServiceCacheImpl .up.|> tech.eportfolio.server.service.UserService
  tech.eportfolio.server.service.cache.UserServiceCacheImpl o-- tech.eportfolio.server.service.UserService : userService

@enduml
